[tool.poetry]
name = "lange"
version = "0.220725.0"
description = "Haskell-like intervals for Python"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
