[tool.poetry]
name = "lange"
version = "0.220727.6"
description = "Haskell-like intervals for Python"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPLv3"
readme = 'README.md'
packages = [
    { include = "lange", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
